Bug 1635885 - Remove debug assertions that fail during process switch r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D75395