dom/base/InProcessBrowserChildMessageManager.cpp
@@ -245,19 +245,6 @@ void InProcessBrowserChildMessageManager::GetEventTargetParent(
   aVisitor.mForceContentDispatch = true;
   aVisitor.mCanHandle = true;
 
-#ifdef DEBUG
-  if (mOwner) {
-    RefPtr<nsFrameLoaderOwner> owner = do_QueryObject(mOwner);
-    RefPtr<nsFrameLoader> fl = owner->GetFrameLoader();
-    if (fl) {
-      NS_ASSERTION(this == fl->GetBrowserChildMessageManager(),
-                   "Wrong event target!");
-      NS_ASSERTION(fl->mMessageManager == mChromeMessageManager,
-                   "Wrong message manager!");
-    }
-  }
-#endif
-
   if (mPreventEventsEscaping) {
     aVisitor.SetParentTarget(nullptr, false);
     return;
